--- a/package.json
+++ b/package.json
@@ -3,23 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "styles:tcm": "tcm src",
+    "sass": "sass --no-source-map src:src && tcm src",
+    "lint": "next lint --fix --strict && next lint --strict",
+    "devbuild": "sass --no-source-map src:src && tcm src && eslint --fix . && next build",
     "build": "next build",
+    "dev": "URL=beta.rsasesorjuridico.com NEXTAUTH_URL=https://beta.rsasesorjuridico.com next dev",
     "start": "next start",
-    "lint": "eslint"
+    "db:migrate": "prisma migrate dev --name init --create-only && prisma generate",
+    "db:push": "prisma db push",
+    "json-to-prisma": "json-to-prisma-schema-convertor convert --inputPath='./prisma/schema.json' --outputPath='./prisma/new/schema.prisma'"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.5",
+    "@stylistic/eslint-plugin": "^5.5.0",
+    "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "typed-css-modules": "^0.9.1",
+    "typed-scss-modules": "^8.1.1"
   },
   "devDependencies": {
-    "babel-plugin-react-compiler": "1.0.0",
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "eslint-config-next": "16.0.1",
+    "typescript": "^5"
   }
 }
